# ecs-colony-sim

./: .gitignore  Cargo.toml  tree.html
obsidian_vault/: .env.md  .github.md  .gitignore.md  Cargo.toml.md  README.md.md  ai.rs.md  ai_plugin.rs.md  app.rs.md  assets.md  components.md  core_model.rs.md  core_plugin.rs.md  creature.rs.md  ecs_colony_sim.md  input.rs.md  item.rs.md  job_assignment.rs.md  job_queue.rs.md  main.rs.md  map.rs.md  map_gen.rs.md  map_resource.rs.md  maps.md  movement.rs.md  otm.py.md  physics.rs.md  plugins.md  resources.md  rust.yml.md  scripts.md  setup_env.sh.md  simulation.rs.md  simulation_plugin.rs.md  sounds.md  src.md  systems.md  systems.rs.md  tests.md  textures.md  time_state.rs.md  (+6 more)
obsidian_vault/.obsidian/: workspace.json
src/: core_plugin.rs  main.rs
src/plugins/: mod.rs  simulation_plugin.rs
src/resources/: mod.rs  time_state.rs
src/systems/: mod.rs  ui.rs
