[package]
name = "ecs_colony_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bevy = "0.16.0"
bevy_ecs_tilemap = "0.16.0"
log = "0.4.27"
thiserror = "2.0.12"
rand = "0.9.1"
bevy-inspector-egui = "0.31.0"
strum = { version = "0.27.1", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
